--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ worker_processes auto;
 events {}
 stream {
     upstream backend {
-        server 107.152.39.225:80;
+        server gcp15.drimevpn.xyz:80;
     }
     server {
         listen 8080;
